[project]
name = "junban"
version = "1.0.3"
description = "Junban – Simple Sequential Python Workflows"
authors = [
    {name = "Sebastian Franz", email = "sebastian.franz@tum.de"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Issues = "https://github.com/biocentral/junban/issues"
Repository = "https://github.com/biocentral/junban"